// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 cbUkhI"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu ldhhaJ"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu czYvUr"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu fHOtRz"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 glBcRY"
      size="small"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu hekKci"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu JpsVU"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu jAeosE"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu ldhhaJ"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu ldhhaJ"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu czYvUr"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu ldhhaJ"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu czYvUr"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu fHOtRz"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu ldhhaJ"
            size="small"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu fHOtRz"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu czYvUr"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu czYvUr"
            size="small"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu fHOtRz"
          size="small"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button XS 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu hekKci"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu hekKci"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu JpsVU"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu hekKci"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu JpsVU"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu jAeosE"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu hekKci"
            size="xsmall"
            variant="primary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu jAeosE"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu JpsVU"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="Container-srtaaf-0 jGMHPe"
    >
      <div
        className="RightWrapper-vueweo-0 ewJJjN"
      >
        <div
          className="ButtonWrapper-k744ak-0 duyQCK"
        >
          <button
            className="sc-jFkmsu JpsVU"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="ButtonWrapper-k744ak-0 duyQCK"
      >
        <button
          className="sc-jFkmsu jAeosE"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="Button__InnerContainer-sc-1xtdszg-0 jgzFKv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
